# panda_simulator

./: README.md  dependencies.rosinstall
panda_gazebo/launch/: panda_world.launch
panda_gazebo/worlds/: saved_world.world
panda_simulator_examples/: CMakeLists.txt  package.xml
panda_simulator_examples/config/: panda_arm.yaml
panda_simulator_examples/include/: objectscanner.h  objectscanner.h.autosave
panda_simulator_examples/launch/: objectscanner.launch
panda_simulator_examples/scripts/config/: rviz_configs.rviz
panda_simulator_examples/src/: move_arm.cpp  objectscanner.cpp
